--- a/css/mission_system.css
+++ b/css/mission_system.css
@@ -16,6 +16,7 @@
     flex-direction: column;
     gap: 15px;
     overflow-y: auto;
+    overflow-x: hidden;
     padding-left: 20px; /* Impede cartões de grudar na esquerda */
     padding-right: 20px; /* Impede cartões de grudar na direita */
     height: 100%;
